--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 <!--    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">-->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <link
+    <!-- <link
       rel="stylesheet"
       type="text/css"
       href="//at.alicdn.com/t/font_777085_hi9s8r75skv.css"
+    /> -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./font_777085_hi9s8r75skv.css"
     />
     <link rel='dns-prefetch' href='https://api.mtnhao.com'>
     <!-- 百度统计 -->
